welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  exo()
  var x =getMondeHauteur
  for(compteur <- 1 to x-1){
    avance()
  }
  droite()
  for(compteur <- 1 to x-1){
    recule()
  }
  gauche()
}

def exo(){
  var x = getMondeHauteur
  var T = new Array[Color](x)
  for(compteur <- 0 to T.length-1){
    T(compteur) = getCouleurSol()
    avance()
  }
  for(i <- 1 to x){
    for(a <- 1 to x){
      recule()
    }
    gauche()
    avance()
    droite()
    avance()
    val decalage = litMessage()
    val y = decalage.toInt
  }
  for(k <- 1 to x){
    Brosse(T(k+y))
    avance()
  }
}

def Brosse(c:Color){
  setCouleurBrosse(c:Color)
  baisseBrosse()
  leveBrosse()
  avance()
}